bump rexster heap size